--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   confetti: ^0.7.0
   flutter_gemini: ^2.0.5
   loading_indicator: ^3.1.1
-
+  circular_countdown_timer: ^0.2.4
+  shared_preferences: ^2.3.2
 
 
 dev_dependencies:
